# iperf

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitreview  .hgignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README-AQ.md  README.md  RELEASE_NOTES  RELNOTES.md  TODO  aclocal.m4  auth_test.sh  autogen.sh  bootstrap.sh  building.html  cJSON.c  confdefs.h  config.cmake  config.guess  config.h.in  configure  configure.ac  conftest.c  dev.html  faq.html  genindex.html  index.html  invoking.html  iperf3.spec.in  (+18 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  container.yaml  release.yml  style_check.yml  test.yml  windows_build.yml
_sources/: building.rst.txt  dev.rst.txt  dev.txt  faq.rst.txt  faq.txt  index.rst.txt  index.txt  invoking.rst.txt  invoking.txt  news.rst.txt  news.txt  obtaining.rst.txt  obtaining.txt
_static/: bootstrap-sphinx.css  bootstrap-sphinx.js  documentation_options.js  esnet.css
cmake/: CMakeDebugUtils.cmake  Info.plist.in
cmake/toolchains/: iphoneos.toolchain.cmake  iphonesimulator.toolchain.cmake
compat/: Makefile.am  Makefile.in  Thread.c  delay.cpp  error.c  gettimeofday.c  headers_slim.h  inet_ntop.c  inet_pton.c  signal.c  snprintf.c  string.c
config/: ax_check_openssl.m4  config.sub  iperf_config_static_bin.m4  ltmain.sh
contrib/: Dockerfile  README.txt  iperf3.gp  iperf3.service  iperf3_@.service  iperf3_@.socket  iperf3_to_gnuplot.py
doc/: Makefile.am  Makefile.in  index.html  ui_license.html
docs/: 2017-04-27.txt  2017-06-06.txt  Makefile  TCPandUDP.docx  TCPandUDP.txt  building.rst  conf.py  dev.rst  faq.rst  index.rst  invoking.rst  news.rst  obtaining.rst
docs/_esnet/: LICENSE  README.rst  deploy.sh
docs/_esnet/templates/: layout.html  navbar.html  relations.html
docs/superpowers/plans/: 2026-06-15-tcp-client-proxy.md
docs/superpowers/specs/: 2026-06-15-tcp-client-proxy-design.md
examples/: Makefile  Makefile.am  Makefile.in  mic.c  mis.c
experiment/: baseline_quic.py  baseline_tcp.py  baseline_udp.py
include/: Client.hpp  Condition.h  Extractor.h  List.h  Listener.hpp  Locale.h  Makefile.am  Makefile.in  Mutex.h  PerfSocket.hpp  Reporter.h  Server.hpp  Settings.hpp  SocketAddr.h  Thread.h  Timestamp.hpp  config.win32.h  delay.hpp  gettimeofday.h  gnu_getopt.h  headers.h  inet_aton.h  report_CSV.h  report_default.h  service.h  snprintf.h  util.h  version.h
jni/: Android.mk  Application.mk
m4/: acx_pthread.m4  ax_create_stdint_h.m4  dast.m4
man/: Makefile.am  Makefile.in
scripts/: gen_quic_p12.sh
src/: AUTHORS  CMakeLists.txt  Client.cpp  Extractor.c  Launch.cpp  List.cpp  Listener.cpp  Locale.c  Makefile  Makefile.am  Makefile.in  Makefile.mingw  Makefile.old  PerfSocket.cpp  README.txt  ReportDefault.c  Reporter.c  Server.cpp  Settings.cpp  TODO.txt  cjson.c  cjson.h  config.h.in  de_fraunhofer_fokus_OpenMobileNetworkToolkit_Iperf3Worker.c  de_fraunhofer_fokus_OpenMobileNetworkToolkit_Iperf3Worker.h  dscp.c  flowlabel.h  gnu_getopt.c  iperf.1  iperf.h  iperf.nsis  iperf3.1  iperf_api.c  iperf_api.c:Zone.Identifier  iperf_api.h  iperf_auth.c  iperf_auth.c:Zone.Identifier  iperf_auth.h  iperf_client_api.c  iperf_client_api.h  (+67 more)
src.old/: Client.cpp  Makefile.in  PerfSocket.cpp  ReportCSV.c  ReportDefault.c  SocketAddr.c  gnu_getopt_long.c  main.cpp  service.c  sockets.c
thirdparties/include/c/: c_bats_api.h  c_bats_types.h
thirdparties/include/cpp/: bats_config.h  bats_connection.h  bats_iocontext.h  bats_protocol.h
tools/: CODE_FORMAT.md  code_formatting.py
